# eurekamesh

./: .gitignore  CITATION.cff  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  sitecustomize.py
.github/workflows/: ci.yml
code/: config.py
code/dashboard/: app.py
code/eurekamesh/: __init__.py  cli.py
code/eurekamesh/adapters/: base.py  text.py
code/eurekamesh/core/: __init__.py  ccad_engine.py  interfaces.py  metrics.py  rag_system.py
code/eurekamesh/domains/: __init__.py
code/eurekamesh/domains/drug_discovery/: __init__.py  canonicalizer.py  constraints.py  rdkit_distance.py  scorer.py
code/eurekamesh/domains/synthetic_biology/: __init__.py  canonicalizer.py  scorer.py
code/experiments/: abtest_anti_dup_context.py  baseline_posthoc_dedup.py  benchmark_guacamol.py  benchmark_moses.py  benchmarks_real.py  logs_aggregate.py  parser.py  plot_abtest_summary.py  render_report.py  run_e2e.py  run_naive_baseline_raw.py  util_connectors.py  validate_baseline_and_feasibility.py
code/tests/: conftest.py  test_canonicalization.py  test_context_order.py  test_dedup_metrics.py  test_embedding_determinism.py  test_metrics_consistency.py  test_parser.py
docs/: CCAD_Framework_Medium.md  CCAD_Medium.html  CCAD_Molecules_Medium.md  CCAD_PAPER_DRAFT.md
publish/data/: mini_bench_20251220_212816.json
scripts/: make_figures.py
tools/: make_logo.py
